<resources>
    <string name="app_name">2THICCC</string>
    <string name="login_button">Login</string>
    <string name="settings_button">Settings</string>
    <string name="fitness_button">Fitness</string>
    <string name="nutrition_button">Nutrition</string>
    <string name="profile_button">Profile</string>
    <string name="fitness_text">Fitness</string>
    <string name="exercise_list">Exercise List</string>
    <string name="intro_message">Please select your current fitness level:</string>
    <string name="intro_message2">Welcome to 2Thicc Fitness!\nWe help you plan and execute your goals by choosing your preferred exercies and curating your own circuits!</string>
    <string name="exercise_desc">Below is out wide range of exercises available in our database:</string>
    <string name="calendar_desc">You can add, delete and keep track of your circuits with our Thiccbook:</string>
    <string name="beginner_desc">You are a new to working out and have little knowledge of exercies and little to no foundation, you are active 1–3 days a week</string>
    <string name="intermediate_desc">An experienced trainee with a moderate to somewhat knowledge of exercises, you are active 3–5 days a week</string>
    <string name="advanced_desc">An advanced trainee, you have years of consistent experience working your body and you are active 4–7 days a week</string>
    <string name="push_ups">An exercise done laying with face, palms and toes facing down, keeping legs and back straight, extending arms straight to push body up and back down again\nTarget: Upper body, Shoulders</string>
    <string name="squat_thrust">The squat thrust builds strength and explosiveness in the lower body with an emphasis on the quads, glutes, and hamstrings.\nTarget: Lower body, legs</string>
    <string name="squats">The squat is a full-body fitness staple that works your glutes, quads, and hamstrings and sneakily strengthens your core\nTarget: Core, Legs</string>
    <string name="leg_raises">The leg raise is a strength training exercise which targets the anterior hip flexors\nTarget: Legs</string>
    <string name="crunches">The basic crunch is the consummate abdominal exercise in a strength-training program. Pay special attention to your form when you do crunches, especially if you have lower-back or neck problems\nTarget: Core, Abs</string>
    <string name="mountain_climbers">A mountain climber is a bodyweight exercise that is useful for burning calories, building stamina and strengthening the core/nTarget: Core</string>
    <string name="plank">The plank (also called a front hold, hover, or abdominal bridge) is an isometric core strength exercise that involves maintaining a position similar to a push-up for the maximum possible time\nTarget: Core</string>
    <string name="high_knees">High Knees are a cardio-intensive exercise performed at a fast pace. It engages your core, strengthens all the muscles in your legs, gets your heart rate up and improves momentum, coordination and flexibility\nTarget: Legs</string>
    <string name="app_name2">Thiccbook</string>
    <string name="hintTxtItem">Enter an item here</string>
    <string name="lblBtnAdd">Add</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Exercises</string>
    <string name="lblBtnSave">Save</string>
    <string name="proceed_button">Proceed</string>
    <string-array name="difficulties">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="exercises">
        <item>Push Ups</item>
        <item>Squat Thrusts</item>
        <item>Squats</item>
        <item>Leg Raises</item>
        <item>Crunches</item>
        <item>Mountain Climbers</item>
        <item>Plank</item>
        <item>High Knees</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createUserButton">Create Account</string>
    <string name="signup_name">Name</string>
    <string name="dialogSU_confirm">Sign up</string>
    <string name="dialogSU_cancel">Cancel</string>
    <string name="dialogSU_confirmPass">Confirm Password</string>
    <string name="BodyStats">Body</string>
    <string name="Goals">Goals</string>
    <string name="Help">Author: Jun Cao\n\nVersion: 4.0\n\nNote: Fresh APK installation will not have\nDB set up.\n\nInstructions:\n\n1. Create an account before logging in.\n\n2. Enter correct credentials to log in.
    </string>
    <string name="Timer">Stopwatch</string>
    <string name="Weight">Weight (lbs)</string>
    <string name="Height">Height (in)</string>
    <string name="BMI">BMI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_screen_Title">Main Screen</string>
    <string name="main_toolbar_editor">Editor</string>
    <string name="profile_page_title">Profile Page</string>
    <string name="profile_line1">Personal Information</string>
    <string name="profile_line3">Stop Watch</string>
    <string name="profile_line2">Body metrics</string>
    <string name="nutrition_page_title">Nutrition</string>
    <string name="nutrition_line1">Water Consumption</string>
    <string name="nutrition_line2">Caloric Intake</string>
    <string name="nutrition_line3">Calendar</string>
    <string name="fitness_page_title">Fitness</string>
    <string name="fitness_line1">Workout Information</string>
    <string name="fitness_line2">Adaptive Programs</string>
    <string name="fitness_line3">Various Exercises</string>
    <string name="profileInfoTitle">Profile Info</string>
    <string name="profileInfoText">\nUses toggle buttons to show/hide fragments. \n Fragments include a BMI calculator and a stopwatch.\n\n User will insert weight and height for BMI calculation and BMI will generate automatically.\n\n Stopwatch functionality will start, pause, resume, and reset, time will also be able to be edited.\n\n\n\nVersion: 3.5\nAuthor:Franchesco Livado </string>
    <string name="fitnessInfoTitle">Fitness Info</string>
    <string name="fitnessInfoText">\nUses a spinner object to display information on a users\' fitness level based on how active they are in a week. It is diplayed using a fragment FrameLayout.\nFirst the fitness level is selected and then we\'re taken to the main fitness page.\n\nHere we can check the exercises available or create our own circuit (list) to add our own workouts and save them even if the app is exited.\n\n\nVersion 2.5 Anushaanth Jayanthan </string>
    <string name="nutritionInfoTitle">Nutrition Info</string>
    <string name="nutritionInfoText">\nUses a calendar to let the user enter water and caloric intake for each day.\n Enter in the water consumption and caloric intake in the boxes provided. \n Press the buttons beside the text boxes to add that to daily water/calorie progress.\n\n Select a day on the calendar to update water/calorie progress for that day.\n\n\n\nVersion: 3.5\nAuthor: Stefan Lucic</string>
    <string name="mainInfoTitle">Main Page Info</string>
    <string name="mainInfoText">\n\nUses a recycler view to cycle through available activities.\n\nClick the views to go to the activity of your choice.\n\nClick the icon in the bottom right corner of the view to see information about the activity and author.\n\nAdd and remove items from the Recycler using the buttons in the view at the bottom of the Recycler View.\n\n\n\nVersion: 2.1\nAuthor: Luka Sitas</string>
    <string name="addItemTitle">Add Item</string>
    <string name="nutrition_text">Nutrition</string>
    <string name="Water">How many glasses of water did you drink today?</string>
    <string name="waterButton">Enter water</string>
    <string name="Calories">How many calories did you take in?</string>
    <string name="calButton">Enter calories</string>
    <string name="waterLeft">Glasses left to drink: </string>
    <string name="calLeft">Max calories left: </string>
    <string name="waterDrank">You drank the daily recommended amount of water</string>
    <string name="snackbar">You have exceeded your daily calorie limit!</string>
    <string name="snackbarBtn">I will try to do better</string>
    <string name="snackbarMsg">Good, otherwise you will stay 2Thiccc!</string>
</resources>
