<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/buttonborder"
    >

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/createUserButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/nameSU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColorHint="@color/hintcolor"
        android:inputType="textPersonName"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="65dp"
        android:hint="@string/signup_name"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/uNameSU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColorHint="@color/hintcolor"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="65dp"
        android:inputType="textPersonName"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/passSU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColorHint="@color/hintcolor"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="65dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirmpassSU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/hintcolor"
        android:layout_marginHorizontal="65dp"
        android:padding="10dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:hint="@string/dialogSU_confirmPass" />

</LinearLayout>